# HEAD

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yaml
configs/HEAD/: HEAD_retina_faster_mnv2_fpn_mstrain_1x_coco.py  head_retina_faster_r18_fpn_mstrain_1x_coco.py
configs/HEAD_dag/: HEAD_dag_retina_faster_mnv2_fpn_mstrain_1x_coco.py  head_dag_retina_faster_r18_fpn_mstrain_1x_coco.py
configs/_base_/: default_runtime.py
configs/_base_/datasets/: coco_detection.py  coco_detection_mstrain.py
configs/_base_/models/: HEAD_dag_retina_faster.py  HEAD_retina_faster.py  faster_rcnn.py  faster_rcnn_r50_fpn.py  fitnet_retina.py  head_dag_retina_faster.py  head_retina_faster.py  mnv2_fpn.py  r18_fpn.py  r50_fpn.py  retina_faster.py  retinanet.py  retinanet_r50_fpn.py
configs/_base_/schedules/: schedule_1x.py
configs/assist/: retina_faster_mnv2_fpn_mstrain_1x_coco.py  retina_faster_r18_fpn_mstrain_1x_coco.py
configs/faster_rcnn/: faster_rcnn_mnv2_fpn_mstrain_1x_coco.py  faster_rcnn_r18_fpn_mstrain_1x_coco.py  faster_rcnn_r50_fpn_1x_coco.py
configs/fitnet/: fitnet_retina_r18_fpn_mstrain_1x_coco.py
configs/head/: head_retina_faster_mnv2_fpn_mstrain_1x_coco.py  head_retina_faster_r18_fpn_mstrain_1x_coco.py
configs/head_dag/: head_dag_retina_faster_mnv2_fpn_mstrain_1x_coco.py  head_dag_retina_faster_r18_fpn_mstrain_1x_coco.py
configs/kd/: coco_detection_mstrain.py  defeat.py  defeat_faster_mnv2.py  dev_fgfi.py  dev_head_faster_r18.py  dh_rcnn_r18_fpn_mstrain_1x_coco.py  dynamic_rcnn_r18_fpn_mstrain_1x_coco.py  faster_rcnn_mnv2_fpn_mstrain_1x_coco.py  faster_rcnn_r18_fpn_1x_coco.py  faster_rcnn_r18_fpn_mstrain_1x_coco.py  faster_rcnn_r50_fpn_mstrain_1x_coco.py  fcos_faster_mnv2.py  fcos_faster_r18.py  fcos_mnv2_fpn_mstrain_1x_coco.py  fcos_r18_fpn_mstrain_1x_coco.py  fcos_reppoints_mnv2.py  fcos_reppoints_r18.py  fcos_retina_faster_mnv2.py  fcos_retina_faster_mnv2_head.py  fcos_retina_faster_r18.py  fcos_retina_faster_r18_head.py  fgd.py  fgd_mnv2_faster.py  fgd_r18.py  fgd_r18_faster.py  fgd_r18_rep.py  fgfi.py  fgfi_faster_mnv2.py  fitnet.py  fitnet_mnv2.py  fitnet_mnv2_faster.py  fitnet_r18_faster.py  frs_r18.py  gdet.py  gdet_2x_cos.py  gdet_faster_mnv2.py  gdet_faster_r18.py  gdet_mnv2.py  gdet_mnv2_fcos.py  gdet_mnv2_reppoints.py  (+59 more)
configs/retinanet/: retinanet_mnv2_fpn_mstrain_1x_coco.py  retinanet_r18_fpn_mstrain_1x_coco.py  retinanet_r50_fpn_1x_coco.py  retinanet_x101_64x4d_fpn_mstrain_640-800_3x_coco.py
configs/swin/: faster_rcnn_swin-t-p4-w7_fpn_1x_coco.py
head/: __init__.py  adapts.py  datasets.py  dense_heads.py  detectors.py  prior_generators.py  roi_heads.py  samplers.py  train.py  utils.py
mmdet/: __init__.py
mmdet/apis/: train.py
mmdet/core/anchor/: anchor_generator.py  point_generator.py
mmdet/models/dense_heads/: __init__.py  (+2 more)
mmdet/utils/: __init__.py  misc.py
tools/: odps_test.sh  odps_train.sh  test.py  train.py
(+5 files in other folders)
