[project]
name = 'HEAD'
description = 'HEtero-Assists Distillation for Heterogeneous Object Detectors'
readme = 'README.md'

[project.license]
file = 'LICENSE'

[[project.authors]]
name = 'Luting Wang'
email = 'wangluting@buaa.edu.cn'

[project.urls]
Homepage = 'https://github.com/LutingWang/HEAD'

[tool.yapf]
allow_split_before_dict_value = false
coalesce_brackets = true
dedent_closing_brackets = true
split_arguments_when_comma_terminated = true
split_complex_comprehension = true
split_before_arithmetic_operator = true

[tool.isort]
profile = 'hug'
src_paths = [
    'head',
]
line_length = 79
multi_line_output = 3

[tool.pydocstyle]
convention = 'google'

[tool.mypy]
files = [
    'head',
]

[tool.commitizen]
name = 'cz_conventional_commits'
